--- a/nodejs/react-yarn/src/App.css
+++ b/nodejs/react-yarn/src/App.css
@@ -1,4 +1,19 @@
 .App {
-  font-size: large;
   text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+.App-header {
+  background-color: white;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
